# cpp-sdl-tetris

./: CMakeLists.txt  README.md
_notes/: ptr.md  random.md  sdl-notes.md
src/: block.cpp  block.h  constants.h  controller.cpp  controller.h  enums.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  square.cpp  square.h
